💎 enhance: connect the button color with css using var

--- a/src/style.css
+++ b/src/style.css
@@ -71,6 +71,7 @@ body {
   gap: 0.4em;
   padding: 0.4em 0.6em;
   align-items: center;
+  background-color: var(--safari-btn-color);
   border: none;
   border-radius: 0.4em;
   cursor: pointer;
