fix: fixed styling

--- a/src/style.css
+++ b/src/style.css
@@ -24,13 +24,20 @@ body {
 }
 
 .mainMenuDialog {
-  width: 400px;
-  padding: 20px;
-  border: 1px solid #ccc;
-  border-radius: 8px;
+  display: flex;
+  flex-direction: column;
+  padding: 2em;
+  border: 0.0625em solid #ccc;
+  border-radius: 0.5em;
   background-color: white;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  text-align: center;
+  box-shadow: 0 0.25em 0.375em #1a1a1a1a;
+}
+
+.buttonContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 0.5em;
 }
 
 .menuBar {
