--- a/src/style.css
+++ b/src/style.css
@@ -101,7 +101,9 @@ dialog {
   font-style: italic;
   height: 2.5em;
   overflow: hidden;
-  transition: background-color 0.1s ease-in-out, filter 0.2s ease-in-out;
+  transition:
+    background-color 0.1s ease-in-out,
+    filter 0.2s ease-in-out;
 }
 
 .safariButton:hover {
