--- a/src/style.css
+++ b/src/style.css
@@ -121,3 +121,11 @@ dialog {
   max-height: 1.7em;
   object-fit: contain;
 }
+
+.tilesDialog {
+  padding: 2em;
+  border: 0.0625em solid #ccc;
+  border-radius: 0.5em;
+  background-color: white;
+  box-shadow: 0 0.25em 0.375em #1a1a1a1a;
+}
