🔧 fix: custom fonts don't load in production build

--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,24 @@
+@font-face {
+  font-family: 'Ubuntu';
+  src: url('/resources/fonts/Ubuntu-Regular.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Ubuntu';
+  src: url('/resources/fonts/Ubuntu-Bold.ttf') format('truetype');
+  font-weight: bold;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Ubuntu';
+  src: url('/resources/fonts/Ubuntu-BoldItalic.ttf') format('truetype');
+  font-weight: bold;
+  font-style: italic;
+}
+
 body {
   margin: 0;
   overflow: hidden;
